@@ -114,20 +114,20 @@
 
 # A boolean controlling printing of messages about traffic with DAs.  
 # Default is false.
-;net.slp.traceDATraffic = false
+;net.slp.traceDATraffic = true
 
 # A boolean controlling printing of details on SLP messages. The fields in 
 # all incoming messages and outgoing replies are printed.  Default is false.
-;net.slp.traceMsg = false
+;net.slp.traceMsg = true
 
 # A boolean controlling printing details when a SLP message is dropped for 
 # any reason.  Default is false.
-;net.slp.traceDrop = false
+;net.slp.traceDrop = true
 
 # A boolean controlling dumps of all registered services upon registration 
 # and deregistration.  If true, the contents of the DA or SA server are 
 # dumped after a registration or deregistration occurs.  Default is false.
-;net.slp.traceReg = false
+;net.slp.traceReg = true
 
 
 
